par 1- Neural net as generalization of linear regression

--- a/notebookes/NeuralNetWriting.ipynb
+++ b/notebookes/NeuralNetWriting.ipynb
@@ -13,8 +13,24 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### How to model a classifier neural network  and what does it do?\n",
-        "A classifier neural network is a function that computes an output $y \\in \\mathbb{R}$ from a given input $x \\in \\mathbb{R}^{n^{[0]}}$"
+        "### Neural network as a generalization of linear regression\n",
+        "A linear regression is a linear transformation from multi dimensional input x to one dimensional output y. A classifier neural network as a generalization of linear regression, is also a function that computes an output $y \\in \\mathbb{R}$ from a given input multidimensional $x \\in \\mathbb{R}^{n^{[0]}}$\n",
+        "\n",
+        "$$\n",
+        "y = nn(x), x \\in \\mathbb{R}^{n_0}, y \\in \\mathbb{R}\n",
+        "$$\n",
+        "\n",
+        "We expect output of a classifier (nn) to be between 0 and 1: y should be closer to 1 when x is in the class and closer to 0 when x is not in the class.\n",
+        "\n",
+        "The goal is to find or train such functions that are more flexible than just a linear transformation. There are infinitely many way to find a function `nn` that satisfies this.  There are ways, however,  to limit our options. For example we can still use some linear transformation with unknown parameters and a fixed non-linear function. For now let’s assume we only need a linear transformation.\n",
+        "\n",
+        "You can also view a neural net as a function that transforms  $n^{[0]}$ dimensional vector $x$  to a 1 dimensional vector y. If this was a linear transformations, then a matrix of size $(n^{[0]}, 1)$  would do this perfectly, i.e, there exist a matrix $W \\in \\mathbb{R}^{n^{[0]} \\times 1}$\n",
+        "\n",
+        "$$\n",
+        "y = W . x\n",
+        "$$\n",
+        "\n",
+        "####keyword: linear regression, linear transformation\n"
       ],
       "metadata": {
         "id": "rlK-HZjvTiFV"
@@ -44,7 +60,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### What is missing though? we haven’t trained the model yet"
+        "###What does it mean to train a neural net? how we do it."
       ],
       "metadata": {
         "id": "eUh3ZdMsUuSv"
