How it deals with non-linearity

--- a/notebookes/NeuralNetWriting.ipynb
+++ b/notebookes/NeuralNetWriting.ipynb
@@ -42,7 +42,15 @@
         "### How does it deal with non-linearity?\n",
         "\n",
         "\n",
-        "\n"
+        "A neural net can be as simple as $y = W.x$ When a linear relationship exist from input to output, where W is a linear transformation from  $\\mathbb{R}^{n^{[0]}}$ dimensional vector to $\\mathbb{R}$. If such linearity doesn’t exist, all we need to do is to apply a non-linear function $g$ on top of it\n",
+        "\n",
+        "$$\n",
+        "y = g(W * x)\n",
+        "$$\n",
+        "\n",
+        "In theory, any function can be **represented** as such a non-linear function on top of a linear  transformation. In fact all you need to do is to use any matrix that reshapes input dimension to the output dimension, and then use a nonlinear function that makes all values match for each data point.\n",
+        "\n",
+        "####keywords: non-linear, represent\n"
       ],
       "metadata": {
         "id": "gMLyFOa7UEvF"
