minor style change

--- a/notebookes/NeuralNetWriting.ipynb
+++ b/notebookes/NeuralNetWriting.ipynb
@@ -148,7 +148,7 @@
         "More formally, this directions  are\n",
         "\n",
         "$$\n",
-        "dW^{[l]}\\  \\textbf{abbv.} \\ \\ \\   \\partial(J(y)) / \\partial(W^{[l]})\n",
+        "dW^{[l]}\\ \\ \\  \\textbf{abbv.} \\ \\ \\   \\partial(J(y)) / \\partial(W^{[l]})\n",
         "$$\n",
         "\n",
         "for all layers $1 < l < L$.\n",
