--- a/notebookes/NeuralNetWriting.ipynb
+++ b/notebookes/NeuralNetWriting.ipynb
@@ -2,34 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/aminehd/AminehTechnicalWritings/blob/main/notebookes/NeuralNetWriting.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Author: Amineh Dadsetan\n",
-        "## Outline\n",
-        "1. [Neural network as a generalization of linear regression](#neural-network-as-a-generalization-of-linear-regression\n",
-        ")\n",
-        "2. [How does it deal with non-linearity?](#how-does-it-deal-with-non-linearity?)\n",
-        "3. [Transforming input to ouput through n layers: feed forward\n",
-        "](#transforming-input-to-ouput-through-n-layers:-feed-forward )\n",
-        "4. [What does it mean to train a neural net? how we do it.](###what-does-it-mean-to-train-a-neural-net?-how-we-do-it.)\n",
-        "5. []()\n",
-        "6. []()"
-      ],
-      "metadata": {
-        "id": "PnW0O0mfqewV"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "## Introduction"
       ],
@@ -54,7 +26,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Neural network as a generalization of linear regression\n",
+        "Author: Amineh Dadsetan\n",
+        "## Outline\n",
+        "1. [Neural network as a generalization of linear regression](#neural-network-as-a-generalization-of-linear-regression\n",
+        ")\n",
+        "2. [How does it deal with non-linearity?](#how-does-it-deal-with-non-linearity?)\n",
+        "3. [Transforming input to ouput through n layers: feed forward\n",
+        "](#transforming-input-to-ouput-through-n-layers:-feed-forward )\n",
+        "4. [What does it mean to train a neural net? how we do it.](#what-does-it-mean-to-train-a-neural-net?-how-we-do-it.)\n",
+        "5. [How to improve the initial parameters: feed backward\n",
+        "](#how-to-improve-the-initial-parameters:-feed-backward\n",
+        ")\n",
+        "6. [Chain rule and feed backward. The little nudges goes from right to left](chain-rule-and-feed-backward.-The-little-nudges-goes-from-right-to-left)"
+      ],
+      "metadata": {
+        "id": "PnW0O0mfqewV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Neural network as a generalization of linear regression\n",
         "A linear regression is a linear transformation from multi dimensional input x to one dimensional output y. A classifier neural network as a generalization of linear regression, is also a function that computes an output $y \\in \\mathbb{R}$ from a given input multidimensional $x \\in \\mathbb{R}^{n^{[0]}}$\n",
         "\n",
         "$$\n",
@@ -81,8 +73,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### How does it deal with non-linearity?\n",
         "\n",
+        "### How does it deal with non-linearity?\n"
+      ],
+      "metadata": {
+        "id": "0qF3NXpjgst8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
         "A neural net can be as simple as $y = W.x$ When a linear relationship exist from input to output, where W is a linear transformation from  $\\mathbb{R}^{n^{[0]}}$ dimensional vector to $\\mathbb{R}$. If such linearity doesn’t exist, all we need to do is to apply a non-linear function $g$ on top of it\n",
         "\n",
@@ -102,7 +102,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Transforming input to ouput through n layers: feed forward\n",
+        "## Transforming input to ouput through n layers: feed forward\n",
         "However, you don’t have to apply the linear transformation in one-go. You can break one it to several transformation and chain them through multiple layers. In fact you can have matrices $W^{[1]}, ..., W^{[L]}$ such that $W^{[1]}$ transform $n^{[0]}$ dim vector to  $n^{[1]}$ vector,… $W^{[i]}$  transforms a $n^{[i -1]}$ dimensional to $n^{[i ]}$ dimensional vector. Then you can write something like :\n",
         "\n",
         "\n",
@@ -146,7 +146,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###What does it mean to train a neural net? how we do it.\n",
+        "\n",
+        "## What does it mean to train a neural net? how we do it."
+      ],
+      "metadata": {
+        "id": "ANAZMIVHgoeZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "We talked about the feed forward, or how to calculate y based on x layer by layer. However, to  reach there  you need to  find the  matrixes $W^{[i]}$ . There is a pretty straightforward heuristic for this:\n",
         "\n",
         "- First we initialize W’s with random numbers . Remember we know the shape of all of the W’s for each layer.\n",
@@ -165,7 +174,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### How to improve the initial parameters: feed backward\n",
+        "\n",
+        "## How to improve the initial parameters: feed backward"
+      ],
+      "metadata": {
+        "id": "e8c1sWhJgkcb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "The trickiest part of neural nets comes here: To improve the parameters of a neural net, we need the notion of changing the parameters by just a **little bit** in the right **direction** that leads in largest change in$J(y)$ . That is exactly what a partial derivative is about.  \n",
         "\n",
         "More formally, this directions  are\n",
@@ -189,7 +207,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Chain rule and feed backward. The little nudges goes from right to left"
+        "## Chain rule and feed backward. The little nudges goes from right to left"
       ],
       "metadata": {
         "id": "0Cv5JcriVUZI"
@@ -250,8 +268,7 @@
       "name": "python"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
