Added link to colab

--- a/notebookes/NeuralNetWriting.ipynb
+++ b/notebookes/NeuralNetWriting.ipynb
@@ -2,6 +2,25 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/aminehd/AminehTechnicalWritings/blob/main/notebookes/NeuralNetWriting.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Author: Amineh Dadsetan **"
+      ],
+      "metadata": {
+        "id": "AURaSCE6iq6K"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "## Introduction"
       ],
@@ -26,7 +45,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Author: Amineh Dadsetan\n",
         "## Outline\n",
         "1. [Neural network as a generalization of linear regression](#neural-network-as-a-generalization-of-linear-regression\n",
         ")\n",
@@ -268,7 +286,8 @@
       "name": "python"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
