--- a/notebookes/TrainNeuralNet.ipynb
+++ b/notebookes/TrainNeuralNet.ipynb
@@ -22,6 +22,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "***Author: Amineh Dadasetan***"
+      ],
+      "metadata": {
+        "id": "vHb8J6gMY1K-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Introduction\n",
         "In Previous [article](https://nbviewer.org/github/aminehd/AminehTechnicalWritings/blob/main/notebookes/NeuralNetWriting.ipynb#) I talked about classifier neural networks, specefically their feed forward and backward.\n",
         "\n",
