--- a/notebookes/TrainNeuralNet.ipynb
+++ b/notebookes/TrainNeuralNet.ipynb
@@ -132,7 +132,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 564
+          "height": 516
         },
         "id": "ZRpL7Hz8SIm1",
         "outputId": "452231b4-aa03-48df-89f9-a243347245f7"
@@ -209,6 +209,13 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "JWEhh-QN-4xP"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "\n",
         "You could also change the hyperparameters and see how the animation changes.\n",
@@ -217,6 +224,16 @@
       ],
       "metadata": {
         "id": "2-hZTm-gYJ__"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "![](https://github.com/aminehd/AminehTechnicalWritings/blob/main/notebookes/classifier_learning.gif?raw=1)"
+      ],
+      "metadata": {
+        "id": "cuMkW_dD-7OY"
       }
     },
     {
@@ -308,6 +325,13 @@
       },
       "execution_count": 7,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "xN9LXyg1-1fm"
+      }
     }
   ],
   "metadata": {
