Add playground link

--- a/notebookes/TrainNeuralNet.ipynb
+++ b/notebookes/TrainNeuralNet.ipynb
@@ -132,7 +132,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 516
+          "height": 564
         },
         "id": "ZRpL7Hz8SIm1",
         "outputId": "452231b4-aa03-48df-89f9-a243347245f7"
@@ -239,10 +239,28 @@
     {
       "cell_type": "markdown",
       "source": [
+        "I found the inpiration from [this playground](https://playground.tensorflow.org/#activation=relu&batchSize=1&dataset=spiral&regDataset=reg-plane&learningRate=0.03&regularizationRate=0&noise=10&networkShape=7,2&seed=0.93504&showTestData=false&discretize=false&percTrainData=50&x=false&y=false&xTimesY=true&xSquared=false&ySquared=true&cosX=false&sinX=true&cosY=false&sinY=true&collectStats=false&problem=classification&initZero=false&hideText=false)\n",
+        "\n",
+        ":)"
+      ],
+      "metadata": {
+        "id": "k6eARjbo5fqE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Appendix"
       ],
       "metadata": {
         "id": "JlIAMIJLXCOx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "oxAJ3cQQ5fEP"
       }
     },
     {
