Calculate se beta from two approaches

--- a/notebookes/StandardError.ipynb
+++ b/notebookes/StandardError.ipynb
@@ -30,12 +30,12 @@
         "axes.set_title('Sample distribution')"
       ],
       "metadata": {
-        "id": "IrCMPW29l3DW",
-        "outputId": "7caf5661-f869-4178-f7da-01e0c7a651fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 470
-        }
+        },
+        "id": "IrCMPW29l3DW",
+        "outputId": "7caf5661-f869-4178-f7da-01e0c7a651fc"
       },
       "execution_count": 34,
       "outputs": [
@@ -110,12 +110,12 @@
         "axe.plot(np.arange(0, 10, 0.1), np.arange(0, 10, 0.1) * 2 + 4, color='r');\n"
       ],
       "metadata": {
-        "id": "7Gv0FM5YmztD",
-        "outputId": "e39368cd-ec58-4df9-8dce-690220a339a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 452
-        }
+        },
+        "id": "7Gv0FM5YmztD",
+        "outputId": "e39368cd-ec58-4df9-8dce-690220a339a3"
       },
       "execution_count": 36,
       "outputs": [
@@ -150,12 +150,12 @@
         "axe.hist(y - (slope * x + intercept), bins=10);"
       ],
       "metadata": {
-        "id": "af4ZxZoToyea",
-        "outputId": "ff940579-2817-49dc-b2aa-08a731eeb401",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 452
-        }
+        },
+        "id": "af4ZxZoToyea",
+        "outputId": "ff940579-2817-49dc-b2aa-08a731eeb401"
       },
       "execution_count": 39,
       "outputs": [
@@ -226,12 +226,12 @@
         "\n"
       ],
       "metadata": {
-        "id": "snwQREIyqc_-",
-        "outputId": "0b0f7474-c20f-41e0-f77e-e2ed0b89cd51",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 470
-        }
+        },
+        "id": "snwQREIyqc_-",
+        "outputId": "0b0f7474-c20f-41e0-f77e-e2ed0b89cd51"
       },
       "execution_count": 44,
       "outputs": [
@@ -260,7 +260,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Notice that the values of betas over all samples has a Gaussian distribution as well. Now we can compute SE(beta1) from two different way. First approach is by definition, that is the standard deviation sampling distribution of beta_0. Secode approach is from the `model` that is `model.bse()`.\n"
+        "Notice that the values of betas computed over all samples has a Gaussian distribution. Now we can compute SE(beta1) from two different way. First approach is by definition, that is the standard deviation sampling distribution of beta_1. Secode approach is from the `model` that is `model.bse()`.\n"
       ],
       "metadata": {
         "id": "n_UR49UfzzDd"
@@ -269,30 +269,24 @@
     {
       "cell_type": "code",
       "source": [
-        "# prompt: calculate standard deviation of an array\n",
-        "\n",
-        "std_beta0 = np.std(beta0s)\n",
-        "std_beta1 = np.std(beta1s)\n",
-        "print(f'SE(beta_0) = {std_beta0}')\n",
-        "print(f'SE(beta_1) = {std_beta1}')\n",
-        "print(f'SE(beta_1) = {model.bse[\"x\"]}')"
+        "print(f'SE(beta_1) calculated from standard deviation of betas = {np.std(beta1s)}')\n",
+        "print(f'SE(beta_1) calculated from the trained ols model = {model.bse[\"x\"]}')"
       ],
       "metadata": {
-        "id": "o9vYY9hV0s05",
-        "outputId": "3721968a-56fd-4732-f8e8-a9c8477443c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "o9vYY9hV0s05",
+        "outputId": "3b227f2f-d6ff-4e7d-b4e6-6395dd24cd68"
       },
-      "execution_count": 47,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "SE(beta_0) = 0.10231912255382845\n",
-            "SE(beta_1) = 0.01673601812043602\n",
-            "SE(beta_1) = 0.01684826247669203\n"
+            "SE(beta_1) calculated from standard deviation of betas = 0.01673601812043602\n",
+            "SE(beta_1) calculated from the trained ols model = 0.01684826247669203\n"
           ]
         }
       ]
@@ -352,11 +346,11 @@
         "import matplotlib.pyplot as plt"
       ],
       "metadata": {
-        "id": "C9XJ8VZPkOuU",
-        "outputId": "e6283974-37c2-4b24-dcf4-bac38cc16615",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "C9XJ8VZPkOuU",
+        "outputId": "e6283974-37c2-4b24-dcf4-bac38cc16615"
       },
       "execution_count": 5,
       "outputs": [
@@ -377,11 +371,11 @@
         "population.shape"
       ],
       "metadata": {
-        "id": "w1r6hZhlkoGw",
-        "outputId": "52146520-733e-445e-bb8c-7882f0b1951c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "w1r6hZhlkoGw",
+        "outputId": "52146520-733e-445e-bb8c-7882f0b1951c"
       },
       "execution_count": 6,
       "outputs": [
@@ -437,11 +431,11 @@
         "print(f\"Intercept: {intercept}\")\n"
       ],
       "metadata": {
-        "id": "sZUG1_-DlEr-",
-        "outputId": "2a19726e-0c3e-46a5-ab5c-836d2bdb0624",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sZUG1_-DlEr-",
+        "outputId": "2a19726e-0c3e-46a5-ab5c-836d2bdb0624"
       },
       "execution_count": 28,
       "outputs": [
