--- a/notebookes/StandardError.ipynb
+++ b/notebookes/StandardError.ipynb
@@ -322,10 +322,32 @@
         "!git config --global user.name \"Amineh Dadsetan\""
       ],
       "metadata": {
-        "id": "iHgW4lLKkLqs"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iHgW4lLKkLqs",
+        "outputId": "a1092f71-6070-4d26-f342-8752008e5312"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "remote: Enumerating objects: 12, done.\u001b[K\n",
+            "remote: Counting objects:   8% (1/12)\u001b[K\rremote: Counting objects:  16% (2/12)\u001b[K\rremote: Counting objects:  25% (3/12)\u001b[K\rremote: Counting objects:  33% (4/12)\u001b[K\rremote: Counting objects:  41% (5/12)\u001b[K\rremote: Counting objects:  50% (6/12)\u001b[K\rremote: Counting objects:  58% (7/12)\u001b[K\rremote: Counting objects:  66% (8/12)\u001b[K\rremote: Counting objects:  75% (9/12)\u001b[K\rremote: Counting objects:  83% (10/12)\u001b[K\rremote: Counting objects:  91% (11/12)\u001b[K\rremote: Counting objects: 100% (12/12)\u001b[K\rremote: Counting objects: 100% (12/12), done.\u001b[K\n",
+            "remote: Compressing objects:  11% (1/9)\u001b[K\rremote: Compressing objects:  22% (2/9)\u001b[K\rremote: Compressing objects:  33% (3/9)\u001b[K\rremote: Compressing objects:  44% (4/9)\u001b[K\rremote: Compressing objects:  55% (5/9)\u001b[K\rremote: Compressing objects:  66% (6/9)\u001b[K\rremote: Compressing objects:  77% (7/9)\u001b[K\rremote: Compressing objects:  88% (8/9)\u001b[K\rremote: Compressing objects: 100% (9/9)\u001b[K\rremote: Compressing objects: 100% (9/9), done.\u001b[K\n",
+            "remote: Total 9 (delta 6), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Unpacking objects: 100% (9/9), 75.32 KiB | 607.00 KiB/s, done.\n",
+            "From https://github.com/aminehd/AminehTechnicalWritings\n",
+            "   d2c85f2..a779e6d  main       -> origin/main\n",
+            "Updating d2c85f2..a779e6d\n",
+            "Fast-forward\n",
+            " notebookes/StandardError.ipynb | 482 \u001b[32m+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\u001b[m\u001b[31m--\u001b[m\n",
+            " 1 file changed, 471 insertions(+), 11 deletions(-)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -350,14 +372,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C9XJ8VZPkOuU",
-        "outputId": "e6283974-37c2-4b24-dcf4-bac38cc16615"
+        "outputId": "2e3e3125-4c0e-472f-abc3-2c4595c18345"
       },
-      "execution_count": 5,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "The autoreload extension is already loaded. To reload it, use:\n",
+            "  %reload_ext autoreload\n",
             "The autoreload extension is already loaded. To reload it, use:\n",
             "  %reload_ext autoreload\n"
           ]
@@ -375,9 +399,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w1r6hZhlkoGw",
-        "outputId": "52146520-733e-445e-bb8c-7882f0b1951c"
+        "outputId": "dcb7d497-a9fe-4976-b01a-cb7de67443a1"
       },
-      "execution_count": 6,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -387,7 +411,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 52
         }
       ]
     },
@@ -402,7 +426,7 @@
       "metadata": {
         "id": "iUFRZtOhkqkg"
       },
-      "execution_count": 33,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -421,7 +445,7 @@
         "model = sm.ols('y ~ x', data=df).fit()\n",
         "\n",
         "# Print the model summary\n",
-        "print(model.summary())\n",
+        "# print(model.summary())\n",
         "\n",
         "# Extract the coefficients\n",
         "slope = model.params['x']\n",
@@ -435,41 +459,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sZUG1_-DlEr-",
-        "outputId": "2a19726e-0c3e-46a5-ab5c-836d2bdb0624"
+        "outputId": "b3eda82a-7b8d-4354-b31c-732c53285c5a"
       },
-      "execution_count": 28,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "                            OLS Regression Results                            \n",
-            "==============================================================================\n",
-            "Dep. Variable:                      y   R-squared:                       0.968\n",
-            "Model:                            OLS   Adj. R-squared:                  0.968\n",
-            "Method:                 Least Squares   F-statistic:                 2.989e+04\n",
-            "Date:                Fri, 20 Sep 2024   Prob (F-statistic):               0.00\n",
-            "Time:                        04:16:17   Log-Likelihood:                -1417.3\n",
-            "No. Observations:                1000   AIC:                             2839.\n",
-            "Df Residuals:                     998   BIC:                             2848.\n",
-            "Df Model:                           1                                         \n",
-            "Covariance Type:            nonrobust                                         \n",
-            "==============================================================================\n",
-            "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
-            "------------------------------------------------------------------------------\n",
-            "Intercept      4.0438      0.070     57.618      0.000       3.906       4.182\n",
-            "x              1.9910      0.012    172.892      0.000       1.968       2.014\n",
-            "==============================================================================\n",
-            "Omnibus:                        2.654   Durbin-Watson:                   1.970\n",
-            "Prob(Omnibus):                  0.265   Jarque-Bera (JB):                2.334\n",
-            "Skew:                          -0.018   Prob(JB):                        0.311\n",
-            "Kurtosis:                       2.766   Cond. No.                         13.8\n",
-            "==============================================================================\n",
-            "\n",
-            "Notes:\n",
-            "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-            "Slope: 1.9910157491169587\n",
-            "Intercept: 4.043815668988889\n"
+            "Slope: 1.9722995765793838\n",
+            "Intercept: 4.217568149265477\n"
           ]
         }
       ]
@@ -480,7 +479,7 @@
       "metadata": {
         "id": "Uorwd4FVky6K"
       },
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": []
     }
   ],
