--- a/notebookes/NeuralNetWriting.ipynb
+++ b/notebookes/NeuralNetWriting.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Author: Amineh Dadsetan **"
+        "**Author: Amineh Dadsetan**"
       ],
       "metadata": {
         "id": "AURaSCE6iq6K"
@@ -46,16 +46,12 @@
       "cell_type": "markdown",
       "source": [
         "## Outline\n",
-        "1. [Neural network as a generalization of linear regression](#neural-network-as-a-generalization-of-linear-regression\n",
-        ")\n",
-        "2. [How does it deal with non-linearity?](#how-does-it-deal-with-non-linearity?)\n",
-        "3. [Transforming input to ouput through n layers: feed forward\n",
-        "](#transforming-input-to-ouput-through-n-layers:-feed-forward )\n",
-        "4. [What does it mean to train a neural net? how we do it.](#what-does-it-mean-to-train-a-neural-net?-how-we-do-it.)\n",
-        "5. [How to improve the initial parameters: feed backward\n",
-        "](#how-to-improve-the-initial-parameters:-feed-backward\n",
-        ")\n",
-        "6. [Chain rule and feed backward. The little nudges goes from right to left](chain-rule-and-feed-backward.-The-little-nudges-goes-from-right-to-left)"
+        "1. Neural network as a generalization of linear regression#neural-network-as-a-generalization-of-linear-regression\n",
+        "2. How does it deal with non-linearity?\n",
+        "3. Transforming input to ouput through n layers: feed forward\n",
+        "4. What does it mean to train a neural net? how we do it.\n",
+        "5. How to improve the initial parameters: feed backward\n",
+        "6. Chain rule and feed backward. The little nudges goes from right to left"
       ],
       "metadata": {
         "id": "PnW0O0mfqewV"
