Edit outline styling

--- a/notebookes/NeuralNetWriting.ipynb
+++ b/notebookes/NeuralNetWriting.ipynb
@@ -46,12 +46,11 @@
       "cell_type": "markdown",
       "source": [
         "## Outline\n",
-        "1. Neural network as a generalization of linear regression#neural-network-as-a-generalization-of-linear-regression\n",
-        "2. How does it deal with non-linearity?\n",
-        "3. Transforming input to ouput through n layers: feed forward\n",
-        "4. What does it mean to train a neural net? how we do it.\n",
-        "5. How to improve the initial parameters: feed backward\n",
-        "6. Chain rule and feed backward. The little nudges goes from right to left"
+        "1. *Neural network as a generalization of linear regression?*\n",
+        "3. *Transforming input to ouput through n layers: feed forward*\n",
+        "4. *What does it mean to train a neural net? how we do it.*\n",
+        "5. *How to improve the initial parameters: feed backward.*\n",
+        "6. *Chain rule and feed backward. The little nudges goes from right to left*"
       ],
       "metadata": {
         "id": "PnW0O0mfqewV"
